Source/WebCore/platform/graphics/chromium/cc/CCFrameRateController.h
@@ -70,6 +70,7 @@ public:
     double nextTickTimeIfActivated();
 
     void setTimebaseAndInterval(double timebase, double intervalSeconds);
+    void setSwapBuffersCompleteSupported(bool);
 
 protected:
     friend class CCFrameRateControllerTimeSourceAdapter;
@@ -86,6 +87,7 @@ protected:
     RefPtr<CCTimeSource> m_timeSource;
     OwnPtr<CCFrameRateControllerTimeSourceAdapter> m_timeSourceClientAdapter;
     bool m_active;
+    bool m_swapBuffersCompleteSupported;
 
     // Members for unthrottled frame-rate.
     bool m_isTimeSourceThrottling;
